- 05-11-04: GetGuildEDegree - Asserts for Preconditons, unused var elimination. [ChrstphrR]
- 05-11-04: GetGuildID - Asserts for Preconditons, index fix. [ChrstphrR]
- 05-11-04: CheckGuildMaster - Asserts for Preconditons, index fix. [ChrstphrR]
- 05-09-04: Corrected interim CVS build title to denote post 1.2.1.1 [ChrstphrR]
- 05-09-04: Bug Fix #852 (prev 5 entries + Ini option ShowDebugErrors) [ChrstphrR]
- 05-09-04: Main unit - MapLoad changed - no more char freezes. [ChrstphrR]
- 05-09-04: ScriptValidated does checking for MapLoad. [ChrstphrR]
- 05-09-04: ScriptValidated parses comment lines in scripts proper. [ChrstphrR]
- 05-09-04: ScriptValidated parses comment lines in scripts proper. [ChrstphrR]
- 05-09-04: ScriptValidated returns false for nonexistant commands/typosr. [ChrstphrR]
- 05-09-04: ScriptValidated - fixed 'monster' parsing problem Colus noticed. [ChrstphrR]
- 05-06-04: Updated monster teleport to not crash (part I). [Colus]
- 05-06-04: Updated PvM LoV and SG cast delay, freezing, damage, timed hits.[Colus]
- 05-06-04: Added TMob BodyCount. [Colus]
- 05-04-04: SG&LOV damage Corrections [Eliot]
- 05-04-04: Database unit - local unit proc LoadSummonLists [ChrstphrR]
- 05-04-04: Bug fix #827 - thorough fix for bad data in summon_item.txt [ChrstphrR]
- 05-04-04: Database unit - local unit function DataBaseFilesExist [ChrstphrR]
- 05-04-04: DataBaseFilesExist - updated to check for required DB files. [ChrstphrR]
- 05-03-04: Fixed (hopefully) the issue with invisible NPC IDs permanently.  Use -1 again. [Colus]
- 05-01-04: Fixed stability problem regarding NPC IDs of value -1. [AlexKreuz]


- 04-30-04: Removed some debug statements. [Colus]
- 04-30-04: Updated Combo Finish to monitor time to expire combo Ashura mode. [Colus]
- 04-30-04: Updated Aqua Benedicta.  Now checks that you are on water. [Colus]
- 04-30-04: Merged some monster AI fixes.  [Darkhelmet]
- 04-29-04: Bughunting - Rolled back elimination of "len" variable in sv1PacketProcess [ChrstphrR]