@@ -1,3 +1,4 @@
+- 05-11-04: Typo in "ShowDebugErrors" during write to ini file. [ChrstphrR]
 - 05-11-04: GetGuildEDegree - Asserts for Preconditons, unused var elimination. [ChrstphrR]
 - 05-11-04: GetGuildID - Asserts for Preconditons, index fix. [ChrstphrR]
 - 05-11-04: CheckGuildMaster - Asserts for Preconditons, index fix. [ChrstphrR]
